[package]
name = "ui_first_pro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0"
serde = "1.0"
serde-xml-rs = "0.3.1"
xml-rs = "*"
minidom = "*"
strum = "0.23"
strum_macros = "0.23"
quote = "1.0"
syn = "1.0.82"
proc-macro2 = "1.0.33"
ui = {path="ui"}
